コンテンツ詳細の画面遷移実装、ランキング画面の不要なコメントを削除、ManifestファイルにActivityを追加、string.xmlに文字列追加

--- a/dTVTerminalApp/app/src/main/AndroidManifest.xml
+++ b/dTVTerminalApp/app/src/main/AndroidManifest.xml
@@ -107,8 +107,12 @@
             <activity android:name="proj.activity.Player.TvPlayerActivity">
             </activity>
 
-            <activity android:name="proj.activity.Player.VideoPlayerActivity">
+            <activity android:name="proj.activity.Player.VideoPlayerActivity">/
             </activity>
+
+        <activity
+            android:name="proj.activity.Player.RecommendPlayerActivity"
+            android:launchMode="singleTask">
         <!-- ======================================  Player グループ End ======================================  -->
 
         <!-- ====================================== Ranking グループ Begin ====================================== -->
