Manifestファイル修正

--- a/dTVTerminalApp/app/src/main/AndroidManifest.xml
+++ b/dTVTerminalApp/app/src/main/AndroidManifest.xml
@@ -112,7 +112,7 @@
 
         <activity
             android:name="proj.activity.Player.RecommendPlayerActivity"
-            android:launchMode="singleTask">
+            android:launchMode="singleTask"/>
         <!-- ======================================  Player グループ End ======================================  -->
 
         <!-- ====================================== Ranking グループ Begin ====================================== -->
