Manifest変更、ステータスバー色変更、ランキング画面画面遷移実装

--- a/dTVTerminalApp/app/src/main/AndroidManifest.xml
+++ b/dTVTerminalApp/app/src/main/AndroidManifest.xml
@@ -110,9 +110,10 @@
             <activity android:name="proj.activity.Player.VideoPlayerActivity">/
             </activity>
 
-        <activity
-            android:name="proj.activity.Player.RecommendPlayerActivity"
-            android:launchMode="singleTask"/>
+            <activity
+                android:name="proj.activity.Player.RecommendPlayerActivity"
+                android:launchMode="singleTask">
+            </activity>
         <!-- ======================================  Player グループ End ======================================  -->
 
         <!-- ====================================== Ranking グループ Begin ====================================== -->
