レイアウトのテーマ設定

--- a/dTVTerminalApp/app/src/main/AndroidManifest.xml
+++ b/dTVTerminalApp/app/src/main/AndroidManifest.xml
@@ -99,6 +99,8 @@
         <activity android:name="proj.activity.Player.RecordedVideoPlayerActivity" />
         <activity android:name="proj.activity.Player.TvPlayerActivity" />
         <activity android:name="proj.activity.Player.VideoPlayerActivity" />
+        <activity android:name="proj.activity.Player.RecommendPlayerActivity"
+            android:launchMode="singleTop"/>
         <!-- ======================================  Player グループ End ====================================== -->
 
 
