下記のファイルの削除 Search/SearchHistoryListActivity.java Search/SearchResultActivity.java search/layout/search_history_list_main_layout.xml search/layout/search_history_main_layout.xml search/layout/serch_result_main_layout.xml

--- a/dTVTerminalApp/app/src/main/AndroidManifest.xml
+++ b/dTVTerminalApp/app/src/main/AndroidManifest.xml
@@ -99,8 +99,9 @@
         <activity android:name="proj.activity.Player.RecordedVideoPlayerActivity" />
         <activity android:name="proj.activity.Player.TvPlayerActivity" />
         <activity android:name="proj.activity.Player.VideoPlayerActivity" />
-        <activity android:name="proj.activity.Player.RecommendPlayerActivity"
-            android:launchMode="singleTop"/>
+        <activity
+            android:name="proj.activity.Player.RecommendPlayerActivity"
+            android:launchMode="singleTop" />
         <!-- ======================================  Player グループ End ====================================== -->
 
 
@@ -122,9 +123,6 @@
 
         <!-- ====================================== Search グループ Begin ====================================== -->
 
-        <activity
-            android:name="proj.activity.Search.SearchResultActivity"
-            android:screenOrientation="portrait" />
         <activity
             android:name="proj.activity.Search.SearchTopActivity"
             android:screenOrientation="portrait" />
