--- a/dTVTerminalApp/app/src/main/AndroidManifest.xml
+++ b/dTVTerminalApp/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.nttdocomo.android.tvterminalapp">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -15,13 +18,11 @@
             android:name="com.nttdocomo.android.tvterminalapp.activity.Home.HomeActivity"
             android:screenOrientation="portrait">
 
-            <!--
                 <intent-filter>
                     <action android:name="android.intent.action.MAIN" />
 
                     <category android:name="android.intent.category.LAUNCHER" />
                 </intent-filter>
-            -->
         </activity>
         <activity
             android:name="com.nttdocomo.android.tvterminalapp.activity.Home.ClipListActivity"
@@ -54,11 +55,11 @@
         <activity
             android:name="com.nttdocomo.android.tvterminalapp.activity.Launch.LaunchActivity"
             android:screenOrientation="portrait">
-            <intent-filter>
+            <!--<intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            </intent-filter>-->
         </activity>
         <activity
             android:name="com.nttdocomo.android.tvterminalapp.activity.Launch.STBConnectActivity"
